Update notebook part 1

--- a/HUANG_YuTing_1_notebook_112022.ipynb
+++ b/HUANG_YuTing_1_notebook_112022.ipynb
@@ -4,20 +4,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Projet 6: Analysez les ventes d'une librairie avec R ou Python \n",
+    "# _Projet 6_: Analysez les ventes d'une librairie avec Python \n",
     "\n",
-    "# Introduction \n",
+    "## Introduction \n",
     "\n",
-    "Dans ce projet, il est demandé d'analyser et de rapprocher les données de trois fichiers csv \"products\", customers et \"transactions\". \n",
-    "La table \"products\" contient les reférences des livres, leurs prix de vente. La table \"customers\" contient les informations des clients du site. La table \"transactions\" contients les achats effectués sur le site..\n",
+    "Dans ce projet, il est demandé d'analyser et de rapprocher les données de trois fichiers csv:  *products*, *customers* et *transactions*. \n",
+    "La table *products* contient les reférences des livres, leurs prix de vente. La table *customers* contient les informations des clients du site. La table *transactions* contient les achats effectués sur le site.\n",
     "\n",
-    "# Objectif: \n",
-    "    Faire le point après deux ans d'exercice,\n",
-    "    pouvoir analyser ses points forts,\n",
-    "    pouvoir analyser ses points faibles,\n",
-    "    pouvoir analyser les comportements clients,etc.\n",
+    "## Objectif: \n",
+    "* Faire le point après deux ans d'exercice\n",
+    "* Analyser les points forts et les points faibles\n",
+    "* Analyser les comportements clients, etc.\n",
     "\n",
-    "# Exploration"
+    "## Exploration"
    ]
   },
   {
@@ -88,7 +87,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "On constate qu'il y a plus lignes dans \"transactions\" que dans le fichier \"customers\" et \"products\".</br> \n",
+    "On constate qu'il y a plus de lignes dans le fichier *transactions* que dans le fichier *customers* et *products*.</br> \n",
     "C'est normal car ce dataframe contient toutes les transactions."
    ]
   },
@@ -97,6 +96,13 @@
    "metadata": {},
    "source": [
     "### Quels sont les informations contenues dans les dataframes ?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Transactions, produits et clients"
    ]
   },
   {
@@ -481,7 +487,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Il y a t-il des valeurs manquantes dans les fichiers? "
+    "### Il y a t-il des valeurs manquantes? "
    ]
   },
   {
@@ -529,7 +535,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Il n'y a pas de valeur manquante (nulle) dans les trois fichiers."
+    "On constate qu'il n'y a pas de valeur manquante (nulle) dans les trois fichiers."
    ]
   },
   {
@@ -832,6 +838,7 @@
    "source": [
     "On constate que les données dans **\"date\"** sont avec le mot **\"test\"**  lorsqu'on choisit les données qui ont le prefix \"ct\" dans \"client_id\". </br> \n",
     "Et on trouve qu'il y a le même \"id_prod\" comme \"T_0\" et pareil pour \"session_id\" avec \"s_0\".</br> \n",
+    "\n",
     "#### Combien de lignes ont le client prefixé avec 'ct' ?"
    ]
   },
@@ -900,7 +907,7 @@
    "metadata": {},
    "source": [
     "Il y a 200 lignes avec la valeur \"test\".\\\n",
-    "Maintenant, on va vérifier que le nombre des donnés avec le mot \" test\" dans le column \"date\" , les données avec le mot \"T_0\" dans \"id_prod\" et les données avec le préfixe \" ct\" dans \" id_client\" sont total 200 qui correspondent au résultat qu'on vient de detecter. "
+    "Maintenant, on va vérifier que le nombre des données avec le mot \" test\" dans le column \"date\" , les données avec le mot \"T_0\" dans \"id_prod\" et les données avec le préfixe \" ct\" dans \" id_client\" sont au total 200, ce qui correspond au résultat qu'on vient de detecter. "
    ]
   },
   {
@@ -938,7 +945,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "On peut donc conclure que ces lignes sont des lignes de test ( les valeurs aberrants) et donc doivent être nettoyés du jeu de données."
+    "On peut donc conclure que ces lignes sont des lignes de test et donc doivent être nettoyés du jeu de données, car on des valeurs abérantes."
    ]
   },
   {
@@ -1094,7 +1101,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "À ce stade, lors de notre exploration, Je constate qu'il y a des données de test dans trois fichiers, 200 lignes dans transactions, une ligne dans products et deux lignes dans customers.\n",
+    "À ce stade, lors de notre exploration, on constate qu'il y a des données de test dans trois fichiers, 200 lignes dans transactions, une ligne dans products et deux lignes dans customers.\n",
     "J'ai supprimé ces lignes de test. \\\n",
     "On va maintenant s'intéresser à la date des transactions."
    ]
