Correct format titles

--- a/HUANG_YuTing_1_notebook_112022.ipynb
+++ b/HUANG_YuTing_1_notebook_112022.ipynb
@@ -9,7 +9,9 @@
     "## Introduction \n",
     "\n",
     "Dans ce projet, il est demandé d'analyser et de rapprocher les données de trois fichiers csv:  *products*, *customers* et *transactions*. \n",
-    "La table *products* contient les reférences des livres, leurs prix de vente. La table *customers* contient les informations des clients du site. La table *transactions* contient les achats effectués sur le site.\n",
+    "- La table *products* contient les reférences des livres, ainsi que leur prix de vente. \n",
+    "- La table *customers* contient les informations des clients du site. \n",
+    "- La table *transactions* contient les achats effectués sur le site.\n",
     "\n",
     "## Objectif: \n",
     "* Faire le point après deux ans d'exercice\n",
@@ -2367,7 +2369,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# ⚡Mission 1 : L'Analyse des différents indicateurs de vente"
+    "## ⚡Mission 1 : L'Analyse des différents indicateurs de vente"
    ]
   },
   {
@@ -2574,7 +2576,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## A) Indicateurs et graphiques autour du CA\n",
+    "### A) Indicateurs et graphiques autour du CA\n",
     "    "
    ]
   },
@@ -2617,7 +2619,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### L'analyse d'univarié.\n",
+    "#### L'analyse d'univarié.\n",
     "On regarde la répartition des prix. \n",
     "On s'aperçoit qu'il y a beaucoup de outliners."
    ]
@@ -2817,14 +2819,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## B) Evolution dans le temps"
+    "### B) Evolution dans le temps"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Analyse comparative : taux de croissance mensuel du chiffre d'affaires \n",
+    "#### Analyse comparative : taux de croissance mensuel du chiffre d'affaires \n",
     "Le taux de croissance d'un mois à l'autre refléte l'**évolution  du CA d'un mois sur l'autre**.</br>\n",
     "- *Formule du taux de croissance : (mois actuel - mois de precedent)/ (mois precedent) x 100* </br>\n",
     "\n",
@@ -4804,7 +4806,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Informations sur les profils clients"
+    "## Informations sur les profils clients"
    ]
   },
   {
@@ -4930,7 +4932,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Répartition des clients par tranche d'age"
+    "### Répartition des clients par tranche d'age"
    ]
   },
   {
@@ -5470,7 +5472,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Répartition du sexe par tranche d'age"
+    "### Répartition du sexe par tranche d'age"
    ]
   },
   {
@@ -5668,7 +5670,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Répartition du CA par sexe"
+    "### Répartition du CA par sexe"
    ]
   },
   {
@@ -5929,7 +5931,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Répartition du chiffre d'affaire par tranche d'âge et le genre"
+    "### Répartition du chiffre d'affaire par tranche d'âge et le genre"
    ]
   },
   {
@@ -6272,15 +6274,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Répartition du CA par client\n",
-    "### Courbe de lorenz"
+    "### Répartition du CA par client\n",
+    "#### Courbe de lorenz"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Qu'est-ce que la courbe de Lorenz?\n",
+    "##### Qu'est-ce que la courbe de Lorenz?\n",
     "*La courbe de Lorenz est une représentation graphique permettant de visualiser la distribution d'une variable au sein d'une population.\n",
     "Ici, la courbe de Lorenz va etre  utilisée pour représenter la répartition du CA au sein de la population des clients (customers).\n",
     "Cette population va etre découpée en dix fractiles. On parle de 'décile' de population. Le premier décile représente les 10 % de la population qui represente la part la plus modeste du CA, le second décile les 20 %  representant la part la plus modestes, etc*\n"
@@ -6451,7 +6453,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Répartition des ages par genre et catégorie"
+    "### Répartition des ages par genre et catégorie"
    ]
   },
   {
