--- a/HUANG_YuTing_2_notebook_112022.ipynb
+++ b/HUANG_YuTing_2_notebook_112022.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "Dans cette mission, nous allons nous interesser à une analyse plus ciblée des clients, et aux liens entres les differentes variables.\n",
     "\n",
-    "#### Plan \n",
+    "### Plan \n",
     "Lien entre:\n",
     "- Le genre(sexe) et les catégories des livres achetés \n",
     "- L'âge  et le montant total du panier \n",
@@ -23,8 +23,8 @@
    "metadata": {},
    "source": [
     "📌<br /> \n",
-    "##### Comment choisir un test statisique ?\n",
-    "Voici un tableau qui resume cela\n",
+    "### Comment choisir un test statistique ?\n",
+    "Concernant le choix des test statistiques, nous allons nous appuyer sur le tableau recapitulatif ci-dessous, selon le nombre de variables utilisées et leur type.\n",
     "|Type of variables|Statistic Test|\n",
     "|---|---|\n",
     "|one numeric |t test|\n",
@@ -202,7 +202,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Nous allons maintenant s'interesser plus en détails sur les clients ciblées et les liens entres les différentes variables. Nous utiliserons des tests statistiques pour prouver ou rejeter les liens."
+    "Nous allons maintenant nous interesser plus en détails aux clients ciblées et aux liens entres les différentes variables. Nous utiliserons des tests statistiques pour prouver ou rejeter les liens."
    ]
   },
   {
@@ -457,7 +457,7 @@
     "    'Categ2': t2[t2.categ.eq(2)]['ca'].values\n",
     "})\n",
     "# plotting graph\n",
-    "df.plot(x=\"Genre\", y=['Categ0', 'Categ1', 'Categ2'], kind=\"bar\")"
+    "df.plot(x=\"Genre\", y=['Categ0', 'Categ1', 'Categ2'], kind=\"bar\", title=\"Répartition par genre par catégorie\")"
    ]
   },
   {
