--- a/HUANG_YuTing_2_notebook_112022.ipynb
+++ b/HUANG_YuTing_2_notebook_112022.ipynb
@@ -2260,7 +2260,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "On voit que les donnees ne rentrent pas dans le modele lineaire."
+    "On voit que les données ne rentrent pas dans le modele lineaire."
    ]
   },
   {
@@ -2268,9 +2268,9 @@
    "metadata": {},
    "source": [
     "On fait le test de normalité **shapiro** sur les deux variables avant de choisir la méthode pour le test de corrélation. </br>\n",
-    "\n",
-    "H0 (Accepté) : l'échantillon correspond à une distribution normale. (P0 > 0,05) </br>\n",
-    "H1 (rejeté) : l'échantillon ne correspond pas à une distribution normale. </br>"
+    "Voici nos hypothèses:\n",
+    "- H0 (Accepté) : l'échantillon correspond à une distribution normale. (P0 > 0,05) </br>\n",
+    "- H1 (rejeté) : l'échantillon ne correspond pas à une distribution normale. </br>"
    ]
   },
   {
@@ -2307,8 +2307,9 @@
    "metadata": {},
    "source": [
     "#### ⚡Test statistique: </br>\n",
-    "H0:  il y a pas de lien entre age et la taille du panier moyen \n",
-    "H1:  un lien correlation"
+    "Avec le test de corrélation de Spearman, on a les hypothèses suivantes: \n",
+    "- H0:  il y a pas de lien entre age et la taille du panier moyen \n",
+    "- H1:  un lien correlation"
    ]
   },
   {
@@ -2416,6 +2417,13 @@
     "|**0.4< (r<sub>s</sub>) <0.7** |**Moderate**|\n",
     "|0.2< (r<sub>s</sub>) <0.4|Weak|\n",
     "|0< (r<sub>s</sub>) <0.2|No or very weak|"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "On vérifie maintenant la p-value "
    ]
   },
   {
@@ -2859,16 +2867,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Dès la première diagramme du haut, on peut voir que le groupe entre 30 et 50 ans est le groupe qui achète le plus de livres de catégorie 0. </br>\n",
+    "Dès le premier diagramme du haut, on peut voir que le groupe entre 30 et 50 ans est le groupe qui achète le plus de livres de catégorie 0. </br>\n",
     "D'après la diagramme au milieu, on constate que le groupe avec le plus grand nombre d'achats de livres de catégorie 1 apparaît entre 30 et 60 ans.</br>\n",
-    "Dans la diagramme du bas, on voit que le groupe qui achète le plus de livres de catégorie 2 se situe entre 20 et 30 ans, ce qui signifie que les livres de catégorie 2 sont les plus populaires auprès des jeunes.</br>"
+    "Dans le diagramme du bas, on voit que le groupe qui achète le plus de livres de catégorie 2 se situe entre 20 et 30 ans, ce qui signifie que les livres de catégorie 2 sont les plus populaires auprès des jeunes.</br>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "ici, on a **une variable quantitative et une variable qualitative**.</br>\n",
+    "ici, on a **une variable quantitative** et **une variable qualitative**.</br>\n",
     "\n",
     "##### Le choix du test.</br>\n",
     "ANOVA ( parametrique ) , ou son alternative non-parametrique Kruskal-Wallis.</br>\n",
@@ -3068,7 +3076,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Anisi, **La P value est inférieur à 0.05**. Donc hypothese null est rejeté; **L'âge par catégorie n'est pas issue d'une distribution normal**. </br>\n",
+    "Ainsi, **La P value est inférieur à 0.05**. </br>\n",
+    "Ainsi, l'hypothese null est rejeté;.</br>\n",
+    " **L'âge par catégorie n'est pas issue d'une distribution normal**. </br>\n",
     "On ne peut donc pas utiliser anova. **On va faire le test de Kruskal-Wallis**.\n",
     "Il est considéré comme l'équivalent non paramétrique de 'One-Way ANOVA'."
    ]
